# DesktopPet

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DesktopPet.spec  LICENSE  README.md  README.zh-CN.md  SECURITY.md  build-exe.bat  build-installer.bat  pyproject.toml  rebuild-skins.bat  requirements-build.txt  requirements.txt  start.bat  stop-desktop-pet.bat  停止桌宠.bat  启动宠物.bat  重建皮肤.bat
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: tests.yml
assets/richman/: README.md
docs/: BUILD.md  GITHUB_PROMO.md  LANGUAGES.md  PUBLISH.md  QA.md  README.md  RELEASE_NOTES.md  RELEASE_PUBLISH_v1.0.1.md  RELEASE_v1.0.1.md
docs/zh-CN/: FEATURES.md
installer/: DesktopPet.iss
scripts/: bake_richman_atlas.py  download_city_images.py  download_richman_assets.py  download_richman_audio.py  generate_richman_assets.py
skins/default/: eye_regions.json
src/: __init__.py  main.py
src/animation/: __init__.py  action_config.py  action_manager.py  action_scheduler.py  action_state.py  animation_controller.py
src/config/: actions.json
src/core/: __init__.py  animation_manager.py  economy_manager.py  intimacy_levels.py  inventory_manager.py  skin_manager.py  state_manager.py
src/games/: __init__.py  base_game.py  catch_game.py  dodge_game.py  game_registry.py  game_runtime.py  memory_game.py  snake_game.py
tests/: test_desktop_pet.py
tools/: build_locales.py  build_skins.py  prepare_brand_assets.py  skin_pipeline.py  skins_manifest.json
(+76 files in other folders)
